--- a/css/style.css
+++ b/css/style.css
@@ -278,7 +278,7 @@ p {
 .nav-bar ul {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-evenly;
     list-style-type: none;
 }
 
@@ -310,8 +310,11 @@ p {
 
 .my-header {
     height: 12vh;
+    width: 100%;
     margin: 0;
     padding: 0;
+    position: fixed;
+    z-index: 1;
 }
 
 /*END Nav bar end Header*/
@@ -320,7 +323,7 @@ p {
 
 .my-hero {
     height: 120vh;
-    margin: 0;
+    margin: 12vh 0 0 0;
     padding: 0;
     color: #ffffff;
     background-image: url("../img/hero-background.jpg");
@@ -390,6 +393,10 @@ p {
     color: #d92950;
 }
 
+.text-dark-gray-30 {
+    color: #424345;
+}
+
 .text-center {
     text-align: center;
 }
@@ -407,4 +414,40 @@ p {
 .bloc-techno ul img {
     opacity: 0.5;
     width: 45%;
+}
+
+.bloc-dev-qualifies {
+    margin: 80px 0 80px -100px;
+}
+
+.bloc-dev-qualifies h2 {
+    font-size: 2.5rem;
+    width: 85%;
+    background-color: blueviolet;
+}
+
+.bloc-dev-items {
+    margin-left: 50px;
+}
+
+.img-back {
+    width: 500px;
+    border-radius: 5%;
+    z-index: 2;
+}
+
+.img-befor {
+    width: 300px;
+    border-radius: 5%;
+    z-index: 3;
+    margin-top: -190px;
+    margin-left: 270px;
+}
+
+.my-width-60 {
+    width: 60%;
+}
+
+.my-width-40 {
+    width: 40%;
 }
