--- a/css/slideshow.css
+++ b/css/slideshow.css
@@ -1,7 +1,7 @@
 #slideshow {
     overflow: hidden;
-    height: 510px;
-    width: 728px;
+    height: 20vh;
+    width: 80%;
     margin: 0 auto;
 }
 
@@ -12,8 +12,8 @@
 
 .slide {
     float: left;
-    height: 510px;
-    width: 728px;
+    height: 20vh;
+    width: 20vw;
 }
 
 .slide:nth-child(1) {
@@ -35,77 +35,7 @@
 .slide-number {
     color: #000;
     text-align: center;
-    font-size: 10em;
-}
-
-@-webkit-keyframes slide {
-    20% {
-        margin-left: 0px;
-    }
-
-    30% {
-        margin-left: -728px;
-    }
-
-    50% {
-        margin-left: -728px;
-    }
-
-    60% {
-        margin-left: -1456px;
-    }
-
-    70% {
-        margin-left: -1456px;
-    }
-
-    80% {
-        margin-left: -2184px;
-    }
-
-    90% {
-        margin-left: -2184px;
-    }
-}
-
-#slideshow {
-    overflow: hidden;
-    height: 510px;
-    width: 728px;
-    margin: 0 auto;
-}
-
-.slide-wrapper {
-    width: 2912px;
-    -webkit-animation: slide 18s ease infinite;
-}
-
-.slide {
-    float: left;
-    height: 510px;
-    width: 728px;
-}
-
-.slide:nth-child(1) {
-    background: #D93B65;
-}
-
-.slide:nth-child(2) {
-    background: #037E8C;
-}
-
-.slide:nth-child(3) {
-    background: #36BF66;
-}
-
-.slide:nth-child(4) {
-    background: #D9D055;
-}
-
-.slide-number {
-    color: #000;
-    text-align: center;
-    font-size: 10em;
+    font-size: 1rem;
 }
 
 @-webkit-keyframes slide {
