--- a/css/style.css
+++ b/css/style.css
@@ -174,6 +174,35 @@
 
 /*END font-face Montserrat*/
 
+/*START font-face Ubuntu Mono*/
+
+@font-face {
+    font-family: 'Ubuntu Mono';
+    src: url('../font/ubuntu_mono/UbuntuMono-Bold.eot');
+    src: url('../font/ubuntu_mono/UbuntuMono-Bold.eot?#iefix') format('embedded-opentype'),
+        url('../font/ubuntu_mono/UbuntuMono-Bold.woff2') format('woff2'),
+        url('../font/ubuntu_mono/UbuntuMono-Bold.woff') format('woff'),
+        url('../font/ubuntu_mono/UbuntuMono-Bold.ttf') format('truetype');
+    font-weight: bold;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Ubuntu Mono';
+    src: url('../font/ubuntu_mono/UbuntuMono-Regular.eot');
+    src: url('../font/ubuntu_mono/UbuntuMono-Regular.eot?#iefix') format('embedded-opentype'),
+        url('../font/ubuntu_mono/UbuntuMono-Regular.woff2') format('woff2'),
+        url('../font/ubuntu_mono/UbuntuMono-Regular.woff') format('woff'),
+        url('../font/ubuntu_mono/UbuntuMono-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
+/*END font-face Ubuntu Mono*/
+
+
 /*START Global*/
 
 body {
@@ -181,6 +210,7 @@ body {
     padding: 0;
     background-color: #ffffff;
     font-family: Roboto, sans-serif;
+    line-height: 1.5;
 }
 
 h1,
@@ -205,6 +235,10 @@ h6 {
 
 h2 {
     font-size: 2.5rem;
+}
+
+h3 {
+    font-size: 1.75rem;
 }
 
 h5 {
@@ -233,6 +267,42 @@ h5 {
 
 .content-style-evenly {
     justify-content: space-evenly;
+}
+
+.padding-top-down-4 {
+    padding: 40px 0;
+}
+
+.padding-top-down-10 {
+    padding: 100px 0;
+}
+
+.margin-left-right-moins-70 {
+    margin: 0 -70px;
+}
+
+.radius-all-10 {
+    border-radius: 10px;
+}
+
+.padding-all-5 {
+    padding: 50px;
+}
+
+.padding-all-4 {
+    padding: 40px;
+}
+
+.padding-all-3 {
+    padding: 30px;
+}
+
+.padding-all-2 {
+    padding: 20px;
+}
+
+.padding-all-1 {
+    padding: 10px;
 }
 
 /*END Global*/
@@ -272,7 +342,7 @@ h5 {
 }
 
 .bg-purpele-dark {
-    background-color: #341f41;
+    background-color: #331f40;
 }
 
 .bg-yellow {
@@ -317,14 +387,6 @@ h5 {
     border-bottom: solid 2px #ff046b;
 }
 
-.box-logo {
-    padding-top: 5px;
-}
-
-.logo {
-    width: 12%;
-}
-
 .my-header {
     height: 12vh;
     width: 100%;
@@ -335,6 +397,30 @@ h5 {
 }
 
 /*END Nav bar end Header*/
+
+/*START img LOGO*/
+
+.box-logo {
+    padding-top: 5px;
+}
+
+.logo {
+    width: 12%;
+}
+
+.logo-partners {
+    width: 60%;
+}
+
+.img-works {
+    width: 80%;
+}
+
+.iconify {
+    width: 50%;
+}
+
+/*START img LOGO*/
 
 /*START hero*/
 
@@ -368,10 +454,17 @@ h5 {
     text-decoration: none;
     border-width: 2px;
     border-radius: 15px;
-    border: solid 2px #ffffff;
     padding: 15px 25px;
     font-weight: 700;
     text-transform: uppercase;
+}
+
+.btn-border-light {
+    border: solid 2px #ffffff;
+}
+
+.btn-border-red {
+    border: solid 2px #d92950;
 }
 
 .btn-lg {
@@ -379,10 +472,17 @@ h5 {
     line-height: 1.5;
 }
 
-.btn-out-line-hover:hover {
-    background-color: rgba(217, 41, 80, .5);
+.btn-out-line-light-hover:hover {
+    background-color: rgba(217, 41, 80, 0);
     border: solid 2px #ffffff;
     color: #ffffff;
+    transition: all 0.2s ease-out;
+}
+
+.btn-out-line-red-hover:hover {
+    background-color: rgba(217, 41, 80, 0);
+    border: solid 2px #d92950;
+    color: #d92950;
     transition: all 0.2s ease-out;
 }
 
@@ -419,6 +519,11 @@ h5 {
 
 .text-center {
     text-align: center;
+}
+
+.text-ubuntu-font {
+    font-family: 'Ubuntu Mono';
+    font-size: 1.3rem;
 }
 
 /*END TEXT COLOR*/
@@ -502,12 +607,52 @@ h5 {
     width: 60%;
 }
 
+.my-width-50 {
+    width: 50%;
+}
+
+.my-width-45 {
+    width: 45%;
+}
+
 .my-width-40 {
     width: 40%;
 }
 
-/*END Dev-qualifies*/
+.my-width-30 {
+    width: 30%;
+}
 
-.avons-plaisir {
-    padding: 100px 0;
+.my-width-20 {
+    width: 20%;
+}
+
+/*END Dev-qualifies*/
+/**/
+
+.card-mini {
+    padding: 30px 0;
+    border-radius: 0 0 20px 20px;
+}
+
+.card-mini p {
+    padding: 2px 30px;
+}
+
+.card-mini-border-top-red {
+    border-top: solid 10px #d92950;
+}
+
+.card-mini-border-top-yellow {
+    border-top: solid 10px #ffe64d;
+}
+
+.card {
+    padding: 0 0;
+    border-radius: 0 0 20px 20px;
+}
+
+.card-header {
+    margin: 0 0 30px 0;
+    padding: 15px;
 }
