Modif sur l'index, 8 ièm section, reste plus que les img | création page emploi et mis en forme des deux block

--- a/css/style.css
+++ b/css/style.css
@@ -213,6 +213,11 @@ body {
     line-height: 1.5;
 }
 
+* {
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
 h1,
 h2,
 h3,
@@ -233,6 +238,10 @@ h6 {
     font-weight: 700;
 }
 
+h1 {
+    font-size: 2.5rem;
+}
+
 h2 {
     font-size: 2.5rem;
 }
@@ -245,10 +254,18 @@ h5 {
     font-size: 1.25rem;
 }
 
+a {
+    text-decoration: none;
+}
+
 #app {
     margin: 0;
     padding: 0;
     background-color: #ffffff;
+}
+
+.main {
+    margin: 11.5vh 0 0 0;
 }
 
 .column {
@@ -259,6 +276,12 @@ h5 {
 .row {
     display: flex;
     flex-direction: row;
+}
+
+.link {
+    font-weight: bold;
+    color: #d92950;
+    ;
 }
 
 .content-style-between {
@@ -273,8 +296,20 @@ h5 {
     justify-content: center;
 }
 
+.padding-left-right-2 {
+    padding: 0 20px;
+}
+
 .padding-top-down-4 {
     padding: 40px 0;
+}
+
+.padding-top-down-5 {
+    padding: 50px 0;
+}
+
+.padding-top-down-6 {
+    padding: 60px 0;
 }
 
 .padding-top-down-10 {
@@ -291,6 +326,10 @@ h5 {
 
 .margin-all-10 {
     margin: 10px;
+}
+
+.margin-top-down-40 {
+    padding: 0 0 40px 0;
 }
 
 .radius-all-10 {
@@ -446,7 +485,7 @@ h5 {
 
 .my-hero {
     height: 120vh;
-    margin: 11.5vh 0 0 0;
+    margin: 0 0 0 0;
     padding: 0 0 20vh 0;
     color: #ffffff;
     background-image: url("../img/hero-background.jpg");
@@ -490,6 +529,11 @@ h5 {
 .btn-lg {
     font-size: 1.25rem;
     line-height: 1.5;
+}
+
+.btn-block {
+    display: block;
+    width: 100%;
 }
 
 .btn-out-line-light-hover:hover {
@@ -551,6 +595,15 @@ h5 {
 .text-ubuntu-font {
     font-family: 'Ubuntu Mono';
     font-size: 1.3rem;
+}
+
+.text-big-1 {
+    font-size: 3rem;
+}
+
+.text-ul-spec {
+    font-family: Montserrat,
+        sans-serif;
 }
 
 /*END TEXT COLOR*/
