--- a/css/style.css
+++ b/css/style.css
@@ -336,6 +336,14 @@ footer {
     padding: 0 20px;
 }
 
+.padding-left-right-4 {
+    padding: 0 40px;
+}
+
+.padding-top-down-2 {
+    padding: 20px 0;
+}
+
 .padding-top-down-4 {
     padding: 40px 0;
 }
@@ -403,6 +411,10 @@ footer {
 /*END Global*/
 
 /*START Bg-Color !*/
+
+.bg-super-dark {
+    background-color: #111111;
+}
 
 .bg-light {
     background-color: #ffffff;
@@ -505,6 +517,10 @@ footer {
 
 .logo {
     width: 12%;
+}
+
+.logo-20 {
+    width: 20%;
 }
 
 .logo-partners {
@@ -855,6 +871,10 @@ footer {
     height: 40vh;
 }
 
+.my-heigth-50 {
+    height: 50vh;
+}
+
 /*END Dev-qualifies*/
 /**/
 
@@ -883,4 +903,8 @@ footer {
 .card-header {
     margin: 0 0 30px 0;
     padding: 15px;
+}
+
+.twetter-row {
+    margin: 0 5px;
 }
