--- a/css/style.css
+++ b/css/style.css
@@ -489,13 +489,25 @@ footer {
     color: #ffffff;
 }
 
-.nav-bar a:hover {
-    border-bottom: solid 2px #ff046b;
-    /* transition: all 0.2s ease-out; */
+.nav-bar nav ul li span {
+    height: 3px;
+    width: 0%;
+    display: block;
+    transition: all 0.4s ease-out;
 }
 
-.nav-active {
-    border-bottom: solid 2px #ff046b;
+.nav-bar nav ul li:hover span {
+    height: 3px;
+    width: 100%;
+    background-color: #ff046b;
+    display: block;
+}
+
+.nav-bar nav ul li .nav-active {
+    height: 3px;
+    width: 100%;
+    background-color: #ff046b;
+    display: block;
 }
 
 .my-header {
@@ -579,6 +591,7 @@ footer {
     padding: 15px 25px;
     font-weight: 700;
     text-transform: uppercase;
+    cursor: pointer;
 }
 
 .btn-border-light {
