--- a/css/style.css
+++ b/css/style.css
@@ -404,6 +404,10 @@ footer {
     border-radius: 10px;
 }
 
+.radius-left-10 {
+    border-radius: 25px 0px 0px 25px;
+}
+
 .padding-all-5 {
     padding: 50px;
 }
@@ -998,4 +1002,17 @@ footer {
     width: 100%;
     background-color: #ff046b;
     display: block;
+}
+
+.logo-minify {
+    vertical-align: middle;
+    width: 20px;
+}
+
+.flag-box {
+    width: 20%;
+    height: 20px;
+    border-radius: 25px 0 0 25px !important;
+    color: #ed0058;
+    text-align: left;
 }
