--- a/css/style.css
+++ b/css/style.css
@@ -400,12 +400,20 @@ footer {
     padding: 20px 0 20px 0;
 }
 
+.margin-top-30 {
+    padding: 30px 0 0 0;
+}
+
 .radius-all-10 {
     border-radius: 10px;
 }
 
 .radius-left-10 {
     border-radius: 25px 0px 0px 25px;
+}
+
+.padding-top-0-autre-5 {
+    padding: 0 50px 50px 50px;
 }
 
 .padding-all-5 {
